tests/fixtures/test-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ''
  namespace: ''
spec:
  selector:
    app: orders-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
