tests/fixtures/yaml-upload--valid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-upload-yaml
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: ealen/echo-server
---
apiVersion: applicationconnector.kyma-project.io/v1alpha1
kind: Application
metadata:
  name: name
  labels: {}
  annotations: {}
spec: {}
